[gd_scene load_steps=20 format=3 uid="uid://sjaafxbsrgsa"]

[ext_resource type="Script" path="res://scripts/tetris.gd" id="1_j08jq"]
[ext_resource type="Texture2D" uid="uid://bp5qdpdtufykw" path="res://assets/background.png" id="2_wtr31"]
[ext_resource type="Texture2D" uid="uid://0ll1n6t84fid" path="res://assets/trash.png" id="3_ae2fc"]
[ext_resource type="Texture2D" uid="uid://dyey4220vadmr" path="res://assets/tetris/tetris.png" id="3_qi4h8"]
[ext_resource type="PackedScene" uid="uid://c3kh52d1fxira" path="res://nodes/ui/in_game_menu.tscn" id="4_kn5xm"]
[ext_resource type="Texture2D" uid="uid://c3jvb2omxn1b0" path="res://assets/tetris/L-block.png" id="4_orplt"]
[ext_resource type="Texture2D" uid="uid://c212xawx23k3u" path="res://assets/tetris/I-block.png" id="5_sbxci"]
[ext_resource type="Texture2D" uid="uid://b8t2bduxx23m3" path="res://assets/tetris/Z-block.png" id="6_2w5an"]
[ext_resource type="Texture2D" uid="uid://s3qldfpw6hin" path="res://assets/tetris/O-block.png" id="7_13cry"]
[ext_resource type="Texture2D" uid="uid://gvui45s71pnf" path="res://assets/tetris/T-block.png" id="8_kt805"]
[ext_resource type="PackedScene" uid="uid://bjwtshs5siyc0" path="res://nodes/player.tscn" id="9_aqdng"]
[ext_resource type="AudioStream" uid="uid://3db1w5hj10df" path="res://assets/sound/tetris_ost.mp3" id="10_whtyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlhwu"]
size = Vector2(616, 23.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7ylh"]
size = Vector2(20, 474)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5jr7"]
size = Vector2(20, 649)

[sub_resource type="SpriteFrames" id="SpriteFrames_5d8hl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_orplt")
}, {
"duration": 1.0,
"texture": ExtResource("5_sbxci")
}, {
"duration": 1.0,
"texture": ExtResource("6_2w5an")
}, {
"duration": 1.0,
"texture": ExtResource("7_13cry")
}, {
"duration": 1.0,
"texture": ExtResource("8_kt805")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="FontFile" id="FontFile_106o7"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_m8s0b"]
font = SubResource("FontFile_106o7")
font_size = 55
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3.65, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_27suf"]
radius = 30.0

[node name="World" type="Node2D"]
script = ExtResource("1_j08jq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(294, 326)

[node name="Background" type="Sprite2D" parent="Camera2D"]
texture = ExtResource("2_wtr31")

[node name="Panel" type="Panel" parent="Camera2D/Background"]
modulate = Color(0.846982, 0.919255, 0.976129, 1)
self_modulate = Color(0, 0.843137, 1, 1)
offset_left = -577.0
offset_top = 379.0
offset_right = 580.0
offset_bottom = 436.0

[node name="Trash" type="Sprite2D" parent="Camera2D"]
position = Vector2(-524, -378)
texture = ExtResource("3_ae2fc")

[node name="InGameMenu" parent="Camera2D" instance=ExtResource("4_kn5xm")]
offset_left = -282.0
offset_top = -106.0
offset_right = -282.0
offset_bottom = -106.0

[node name="Tetris2" type="Sprite2D" parent="."]
position = Vector2(288, 336)
texture = ExtResource("3_qi4h8")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 33
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(288, 592.75)
shape = SubResource("RectangleShape2D_jlhwu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(10, 344)
shape = SubResource("RectangleShape2D_y7ylh")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(350, 344)
shape = SubResource("RectangleShape2D_y7ylh")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-10, 324.5)
shape = SubResource("RectangleShape2D_t5jr7")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(586, 324.5)
shape = SubResource("RectangleShape2D_t5jr7")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(288, -11.5)
shape = SubResource("RectangleShape2D_jlhwu")

[node name="Marker" type="Node2D" parent="."]
position = Vector2(20, 64)

[node name="Tetris" type="Sprite2D" parent="."]
position = Vector2(288, 56)
texture = ExtResource("3_qi4h8")
vframes = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="NextBlock" type="AnimatedSprite2D" parent="."]
position = Vector2(450, 350)
sprite_frames = SubResource("SpriteFrames_5d8hl")
frame = 4

[node name="BestScore" type="Label" parent="."]
offset_left = 92.0
offset_top = 39.0
offset_right = 307.0
offset_bottom = 115.0
scale = Vector2(0.623021, 0.578547)
text = "0104200"
label_settings = SubResource("LabelSettings_m8s0b")
horizontal_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = 303.0
offset_top = 39.0
offset_right = 518.0
offset_bottom = 115.0
scale = Vector2(0.623021, 0.578547)
text = "0000000"
label_settings = SubResource("LabelSettings_m8s0b")
horizontal_alignment = 1

[node name="player" parent="." instance=ExtResource("9_aqdng")]
position = Vector2(169, 523)

[node name="Victory" type="Area2D" parent="."]
position = Vector2(489, 550)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Victory"]
shape = SubResource("CircleShape2D_27suf")

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_whtyi")
autoplay = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Victory" to="." method="_on_victory_entered"]
